# HMS2.0

./: CMakeLists.txt  hospital.db  patient.db
src/code/: admin.cpp  adminAdd.cpp  doctor.cpp  functions.h  globals.h  list.cpp  loginPage.cpp  main.cpp  mainPage.cpp  nurse.cpp  patient.cpp  patientData.cpp  patientList.cpp  reception.cpp
src/code/login/: adminLogin.cpp  doctorLogin.cpp  nurseLogin.cpp  patientLogin.cpp  receptionLogin.cpp
